# law-scout-ai

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: database.py
backend/app/modules/AI/: prueba.ipynb  router.py
backend/app/modules/AI/pipeline/: pipeline.py
backend/app/modules/AI/pipeline/generator/: generator.py
backend/app/modules/auth/: router.py
backend/services/api/: Dockerfile  pyproject.toml  requirements.txt
backend/services/api/app/: main.py
backend/services/api/app/core/: database.py  security.py
backend/services/api/app/modules/users/: repository.py
frontend/: .gitignore  package.json
frontend/src/app/: page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/dashboard/: chatService.ts  layout.tsx  page.tsx
frontend/src/app/dashboard/components/: DashboardSidebar.tsx
frontend/src/app/home/: constants.ts  page.tsx
frontend/src/app/home/components/: FeaturesSection.tsx  HeroSection.tsx  LandingHeader.tsx
frontend/src/components/: README.md
frontend/src/components/features/: index.ts
frontend/src/components/features/chat/: ChatArea.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  FileUploadComponent.tsx  WelcomeMessage.tsx  index.ts
frontend/src/components/layout/: DashboardSidebar.tsx  index.ts
frontend/src/hooks/: use-file-upload.ts  useChat.ts  useFileUpload.ts
frontend/src/lib/: constants.ts  landingConstants.ts
frontend/src/services/: chatService.ts
frontend/src/types/: auth.ts  chat.ts  index.ts
(+23 files in other folders)
